# mothership

./: aether.py  big_tool_xp.py  main.py  mcp_xp.py  mothership.py  pydantic_ai_xp.py  pydantic_git_xp.py  pyproject.toml  retrieve_tool_tool.py  setup_database.py  test.json  test.py  tool_agent.py
mcp_server/: aws-kb-retrieval-server.json  brave-search.json  everart.json  fetch.json  gdrive.json  git.json  github.json  gitlab.json  google-maps.json  postgres.json  redis.json  sentry.json  sequentialthinking.json  slack.json  sqlite.json
mcp_servers/: aws-kb-retrieval-server.json  aws-kb-retrieval-server.txt  brave-search.json  brave-search.txt  everart.json  everart.txt  fetch.json  fetch.txt  filesystem.json  filesystem.txt  gdrive.json  gdrive.txt  git.json  git.txt  github.json  github.txt  gitlab.json  gitlab.txt  google-maps.json  google-maps.txt  memory.json  memory.txt  postgres.json  postgres.txt  puppeteer.json  puppeteer.txt  redis.json  redis.txt  sentry.json  sentry.txt  sequentialthinking.json  slack.json  slack.txt  sqlite.json  sqlite.txt  time.json  time.txt
